blade component base setup + sidebar partially done

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "tailwindcss": "^2.2.7"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.3.3",
+        "alpinejs": "^3.2.3"
     }
 }
