--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@tailwindcss/forms": "^0.3.3",
-        "alpinejs": "^3.2.3"
+        "alpinejs": "^3.2.3",
+        "swiper": "^7.0.1"
     }
 }
